--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
     "ghcr.io/microsoft/codespace-features/external-repository:latest": {
-      "cloneUrl": "https://brencampbell@dev.azure.com/brencampbell/Agile%20Planning%20and%20Portfolio%20Management%20with%20Azure%20Boards/_git/Agile-Planning-and-Portfolio-Management-with-Azure-Boards_wiki",
+      "cloneUrl": "https://AppDevChallenge@dev.azure.com/AppDevChallenge/GHCPHack/_git/GHCPHack",
       "folder": "/workspaces/ado-repos"
     }
   },
